@@ -11,6 +11,8 @@
     * validation of file format and file size [Kyle Maxwell]
     * validation of image dimensions [Lee O'Mara]
     * file permissions can be set via :permissions option
+    * fixed bug that prevents deleting of file via assigning nil if
+      column is declared as NON NULL on some databases
 
 0.3.1
     * make object with file_columns serializable
